--- a/index.html
+++ b/index.html
@@ -51,16 +51,24 @@ layout: default
         <svg class="icon icon-envelope-o"><use xlink:href="#icon-envelope-o"></use></svg>
         <h3>Entre em Contato</h3>
         <ul>
-            {% if site.contact.phone %}<li><strong>Consultório:</strong> {{ site.contact.phone }}</li>{% endif %}
+            {% if site.contact.phone %}<li><strong>Vivaz Espaço de Saúde:</strong> {{ site.contact.phone }}</li>{% endif %}
             {% if site.contact.emergency %}<li><strong>Emergency:</strong> {{ site.contact.emergency }}</li>{% endif %}
-            {% if site.contact.email %}<li><strong>Email:</strong> {{ site.contact.email }}</li>{% endif %}
+            {% if site.contact.phone2 %}<li><strong>Spazio Sorrir:</strong> {{ site.contact.phone2 }}</li>{% endif %}
+            {% if site.contact.email %}<br><li><strong>Email:</strong> {{ site.contact.email }}</li>{% endif %}
+
         </ul>
     </div>
     <div class="col-sm-4">
         <svg class="icon icon-map-marker"><use xlink:href="#icon-map-marker"></use></svg>
-        <h3>Endereço</h3>
+        <h3>Endereços</h3>
             <p>
-                {{ site.contact.address }}
+                <table>
+                <tr>
+                    <td><center>{{ site.contact.address }}</center></td>
+
+                    <td><center>{{ site.contact.address2 }}</center></td>            
+                </tr>
+                </table>
             </p>
     </div>
         <div class="col-sm-4">
@@ -82,7 +90,7 @@ layout: default
         <div class="row">
             <div class="col-sm-6">
                 <h3>Dra. Vívian Ledur Machado</h3>
-                <p>Bla Bla Bla Bla Bla.</p><br>
+                <p></p><br>
                 <div class="media">
                     <div class="media-left">
                         <div class="boxed-icon">
@@ -90,7 +98,7 @@ layout: default
                         </div>
                     </div>
                     <div class="media-body">
-                        <p>É Graduada em Odontologia pela ULBRA Canoas em 2000.</p>
+                        <p>Graduada em Odontologia pela ULBRA Canoas em 2000.</p>
                     </div>
                 </div>
 
@@ -101,7 +109,7 @@ layout: default
                         </div>
                     </div>
                     <div class="media-body">
-                        <p>Realizou Extensão em Odontopediatria na PUC-RS em 2001.</p>
+                        <p>Extensão em Odontopediatria na PUC-RS em 2001.</p>
                     </div>
                 </div>
 
@@ -112,7 +120,7 @@ layout: default
                         </div>
                     </div>
                     <div class="media-body">
-                        <p>Atualizou-se em Ortodontia Preventiva e Interceptiva na ABO-RS em 2002.</p>
+                        <p>Atualização em Ortodontia Preventiva e Interceptiva na ABO-RS em 2002.</p>
                     </div>
                 </div>
                    
@@ -124,7 +132,7 @@ layout: default
                         </div>
                     </div>
                     <div class="media-body">
-                        <p>Tornou-se Especialista em Ortodontia pela SOBRACID-RS em 2005.</p>
+                        <p>Especialista em Ortodontia pela SOBRACID-RS em 2005.</p>
                     </div>
                 </div>
 
@@ -136,6 +144,17 @@ layout: default
                     </div>
                     <div class="media-body">
                         <p>Extensão em Disfunção dos Maxilares na SOBRACURSOS-RS em 2006.</p>
+                    </div>
+                </div>
+
+                <div class="media">
+                    <div class="media-left">
+                        <div class="boxed-icon">
+                            <svg class="icon icon-star-o"><use xlink:href="#icon-star-o"></use></svg>
+                        </div>
+                    </div>
+                    <div class="media-body">
+                        <p>Capacitação em Ortodontia Lingual pelo BACCI INVISIBLE ORTHODONTICS em 2016.</p>
                     </div>
                 </div>
 
@@ -227,7 +246,7 @@ layout: default
  --><!-- End Testimonials -->
 
 <!-- Start Gallery -->
-<div id="gallery" class="gallery">
+<!-- <div id="gallery" class="gallery">
         
     <h2 class="section-title">Galeria</h2>
 
@@ -242,7 +261,7 @@ layout: default
         </a>
     {% endfor %}
 
-</div>
+</div> -->
 <!-- End Gallery -->
 
 <!-- Start Map -->
