avoiding maps while not working

--- a/index.html
+++ b/index.html
@@ -260,9 +260,7 @@ layout: default
 <!-- End Gallery -->
 
 <!-- Start Map -->
-<script type="text/javascript" src="//maps.googleapis.com/maps/api/js?key=AIzaSyC8P3QkrWECaI_jljUalM8FrH2YltiC7ew">
-</script>
-
-<div id="location" class="map" data-zoom="{{ site.map.zoom }}" data-address="{{ site.map.address }}" data-address-details="<img src='{{ site.map.address_details }}'>"></div>
+<!-- 
+<div id="location" class="map" data-zoom="{{ site.map.zoom }}" data-address="{{ site.map.address }}" data-address-details="<img src='{{ site.map.address_details }}'>"></div> -->
 
 <!-- End Map -->
